lagt till header i body

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<title>Document</title>
 </head>
 <body>
+	<h1>det här är en h1 titel</h1>
 	<p>hej det här är starten på ett test projekt</p>
 	
 </body>
